[tool.poetry]
name = "okomptest"
version = "0.1.0"
description = ""
authors = ["Pavel Yakovlev <pdyakovlev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
jinja2 = "^3.1.4"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
